--- a/.env.template
+++ b/.env.template
@@ -2,3 +2,8 @@ PORT=3000
 
 MONGO_DB_URL='mongodb://mongo_user:123456@localhost:27017'
 MONGO_DB_NAME='myStore'
+
+JWT_SECRET=[your_jwt_secret_key]
+EMAIL_SERVICE=[mailer_service]
+EMAIL_USER=[your_email_mailer]
+EMAIL_PASSWORD_KEY=[secret_key]
