--- a/.env.template
+++ b/.env.template
@@ -2,7 +2,7 @@ PORT=3000
 
 MONGO_DB_URL='mongodb://mongo_user:123456@localhost:27017'
 MONGO_DB_NAME='myStore'
-
+SEND_EMAIL=false
 JWT_SECRET=[your_jwt_secret_key]
 EMAIL_SERVICE=[mailer_service]
 EMAIL_USER=[your_email_mailer]
